<resources>
    <string name="app_name">PilpCom</string>
    <string name="action_settings">Settings</string>
    <string name="different">Different</string>
    <string name="rss_url">News RSS URL</string>
    <string name="display_limit">Data display limit</string>
    <string name="date_format">yyyyMMdd HH:mm:ss</string>
    <string name="date_format2">EE yyyy-MM-dd</string>
    <string name="time_format">HH:mm.ss</string>
    <string name="map_zoomlevel">Map zoomlevel</string>
    <string name="chat">leave text empty to call %s</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>

    <string name="classic_radio">Classic Station</string>
    <string name="diamond_radio">Swing Radio</string>
    <string name="ost_radio">Heavy Rock</string>
    <string name="general_radio">General Twist</string>
    <string name="clk">Stat</string>
    <string name="who">Inv</string>
    <string name="msg">Msg</string>
    <string name="area">Map</string>
    <string name="news">News</string>

    <string name="size_and_pos">Size and position</string>
    <string name="apptop">top padding</string>
    <string name="appleft">left padding</string>
    <string name="appwidth">width</string>

    <string-array name="quality_names">
        <item>outer conurbation area</item>
        <item>city</item>
        <item>township</item>
        <item>neighborhood</item>
        <item>street</item>
        <item>bathroom</item>
    </string-array>

    <string-array name="quality_values">
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>

</resources>
