<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimaryDarker"
    android:orientation="vertical"
    android:keepScreenOn="true"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="5"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14dp"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:onClick="toClk"
            android:text="@string/clk"
            />
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14dp"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimaryDark"
            android:text="@string/who"
            />
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14dp"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:onClick="toMsg"
            android:text="@string/msg"
            />
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14dp"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:onClick="toArea"
            android:text="@string/area"
            />
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14dp"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:onClick="toNews"
            android:text="@string/news"
            />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contactList"
        android:clickable="true"
        android:focusable="true"
        android:listSelector="@drawable/list_selector"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true">
    </ListView>

</LinearLayout>
