<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarker"
    android:keepScreenOn="true"
    android:layout_gravity="left"
    android:paddingLeft="@dimen/appleft"
    android:paddingTop="@dimen/apptop"
    android:id="@+id/block_clock_main"
    >

    <LinearLayout
        android:id="@+id/thetabs"
        android:orientation="horizontal"
        android:layout_width="@dimen/appwidth"
        android:weightSum="5"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ClkBtn1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/tab_text_size"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimaryDark"
            android:text="@string/clk"
            />
        <Button
            android:id="@+id/WhoBtn1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/tab_text_size"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:onClick="toWho"
            android:text="@string/who"
            />
        <Button
            android:id="@+id/MsgBtn1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/tab_text_size"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:onClick="toMsg"
            android:text="@string/msg"
            />
        <Button
            android:id="@+id/AreaBtn1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/tab_text_size"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:onClick="toArea"
            android:text="@string/area"
            />
        <Button
            android:id="@+id/NewsBtn1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/tab_text_size"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:onClick="toNews"
            android:text="@string/news"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/block_clock"
        android:layout_below="@+id/thetabs"
        android:layout_alignStart="@id/thetabs"
        android:layout_height="match_parent"
        android:layout_width="@dimen/appwidth"
        android:weightSum="2"
        android:orientation="vertical">

        <TextView
            android:layout_weight="1"
            android:id="@+id/section_clock"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/c64pro_mono"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_width="match_parent" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/section_clock2"
            android:layout_height="match_parent"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/c64pro_mono"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textSize="26dp"
            android:layout_width="match_parent" />

    </LinearLayout>

</RelativeLayout>
