<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDarker"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:layout_gravity="left"
    android:paddingLeft="@dimen/appleft"
    android:paddingTop="@dimen/apptop"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="@dimen/appwidth"
        android:weightSum="5"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/tab_text_size"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:onClick="toClk"
            android:text="@string/clk"
            />
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/tab_text_size"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:onClick="toWho"
            android:text="@string/who"
            />
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/tab_text_size"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:onClick="toMsg"
            android:text="@string/msg"
            />
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/tab_text_size"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimaryDark"
            android:text="@string/area"
            />
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/tab_text_size"
            android:fontFamily="@font/c64pro_mono"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:onClick="toNews"
            android:text="@string/news"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="@dimen/appwidth"
        android:layout_height="match_parent">

        <org.osmdroid.views.MapView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map"
            android:scaleX="2"
            android:scaleY="2" />

        <ImageView
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/swMap" />

        <ImageView
            android:id="@+id/marker"
            android:background="@mipmap/ic_launcher"
            android:scaleType="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/section_pos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/c64pro_mono"
            android:textSize="12dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:paddingBottom="60dp" />

    </FrameLayout>

</LinearLayout>